--- a/src/components/MessageSection/MessageSection.css
+++ b/src/components/MessageSection/MessageSection.css
@@ -1,28 +1,29 @@
+
 .message-list {
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    padding: 82px;
-    padding-bottom: 20px;
     background-color: #ededed; 
 }
 .message {
     display:flex;
+    padding-right: 12px;
     align-items: center;
     margin-top: 60px;
     background: #393939;
     color: #fff;
-    padding: 0 auto;
+    /* padding: 0 auto; */
     border-radius: 35px;
 }
 .usermassage {
     display:flex;
+    padding-left: 12px;
     align-items: center;
     align-self: flex-end;
     margin-top: 60px;
     background: #ededed;
     color: black;
-    padding: 0 auto;
+    /* padding: 0 auto; */
     border-radius: 35px;
 }
 .message-text {
@@ -31,15 +32,15 @@
 }
 .compose {
     display: flex;
-    left: 400px;
+    /* left: 400px; */
     height: 85px;
     align-items: center;
     padding: 20px 20px;
     background: #ededed;
     border-top: 1px solid #eeeef1;
-    position: fixed;
-    width: calc(100% - 20px);
-    bottom: 0px;
+    /* position: fixed; */
+    width: 100%;
+    /* bottom: 0px; */
 }
 .compose-input {
     width: 70%;
@@ -54,8 +55,9 @@
     opacity: 0.3;
   }
 .person-photo {
-    position: relative;
-    right: 60px;
+    margin-left: 12px;
+    /* position: relative; */
+    /* right: 60px; */
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -76,7 +78,6 @@
 }
 .contact-wrapper {
     display: flex;
-    margin-top: -55px;
     align-items: center;
     font-size: 18px;
     font-weight: bold;
@@ -95,4 +96,14 @@
     position: relative;
     top: 25px;
     color: grey;
+}
+.messages-list-wrapper {
+    display: flex;
+    padding: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-grow: 1;
+    overflow-y: auto;
+    background-color: #fff;
+    
 }
