--- a/src/pages/Messenger.css
+++ b/src/pages/Messenger.css
@@ -1,10 +1,6 @@
-.wrapper {    
-    display: grid;
+.wrapper {  
+    display: flex; 
+    flex-direction: row;
     width: 100%;
     height: 100vh;
-    grid-template-columns: 400px auto;
-    grid-template-rows: 60px auto 60px;
-    grid-column-gap: 1px;
-    grid-row-gap: 1px;
-
 }
