--- a/src/components/ContactsSection/ContactsSection.css
+++ b/src/components/ContactsSection/ContactsSection.css
@@ -55,3 +55,11 @@
     left: -20px;
     top: 3px;
 }
+.logout-btn {
+    font-size: 14px;
+    display: flex;
+    margin-top: 5px;
+    cursor: pointer;
+    background-color: #fff;
+    border-radius: 10px
+}
